--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,12 @@ server.port=8080
 # ===============================
 # Database
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/flight_db
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/flight_db
+spring.datasource.username=root
+spring.datasource.password=@Himanshu9860
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # ===============================
 # JPA
